[package]
name = "toondb_rag"
version = "0.1.0"
edition = "2021"

[dependencies]
toondb = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
md5 = "0.7"
anyhow = "1"
async-trait = "0.1"

[[bin]]
name = "demo"
path = "src/main.rs"
